CH revsisions on Ch6 of Case Study paper

--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -4,25 +4,47 @@ To be completed.
 
 * Synthesize main results and conclusions from case studies
 
-## Proportion-based LRPs
+<!--CH: both ppn-based and aggregate-abudnance based LRPs rely on CU level assessmnts, so I've revised the headings a bit-->
+
+## CU-level benchmarks and assessments 
+<!--## Proportion-based LRPs-->
 
 <!--CH: I think the main point of this paragraph is that data on component CUs vary in quality and quantity. I've suggested some rewording--> 
 
-Proportion-based LRPs rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate to application of proportion-based LRPs to CUs with a range of data availability including those with stock-recruitment based benchmarks, habitat-based benchmarks, and percentile-based benchmarks on spawner abundances, and CUs without relative-abundance based benchmarks where status typically relies on short and long-term trends over time, as demonstrated in application of the Rapid Multidimensional Scanner Tool. We further demonstrate the assessment of status based on proportion-based LRPs where data are missing in the <!--two case studies, Interior Fraser Coho and--> Inside South Coast Chum case study. <!--KH: edited previous sentence to remove mention of missing data scenarios for coho; we only looked at missing data for logistic in coho study -->  <!--KH, suggestion to add: "Our results from this case study highlight the importance of including data from as many CUs as possible when using the proportion-based approach, so long as individual CU-level status estimates are reliable. This recommendation is especially relevant for SMUs such as South Coast Chum in which component CUs show high variability among themselves in status estimates over time. --> Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs is provided in Holt et al. (in review).
 
-<!--old text: The proportion-based LRPs are the simplest assessment method presented. It consists in verifying is all CUs within the SMU of interest are assessed to be above their lower benchmarks or above the red zone. Complications related to applying proportion-based LRPs arise when considering the range of data availability for salmon CUs. The data availability will determine what metrics are used for the CU status assessment and whether an assessment can be made at all. Recommendations on when it may be appropriate to use a subset of CUs as proxy for all CUs within an SMU are provided in the companion Guidelines paper (Holt et al. In review). -->  
+<!--Proportion-based LRPs--> LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate-abundance based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment based benchmarks, habitat-based benchmarks, and percentile-based benchmarks on spawner abundances. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of the Rapid Multidimensional Scanner Tool to Inside Southcoast Chum - Non Fraser. 
 
-<!-- CH: I think this is specific to data rich SMU where multidimensional status = abundance-based status. I've revised accordingly. On second thought, I may be wrong here, but want to wait until we've resolved the ISC Q below before revising further--> 
-For data-rich SMUs where stock-recruitment based benchmarks were available for component CUs, we found that using $S_{gen}$ as single metric lower benchmark resulted in similar status assessments to using the rapid multidimensional scanning tool. This similarities occur because, when $S_{gen}$ estimates are available, the rapid multidimensional scanning tool will almost always default to the $S_{gen}$ estimates to assess status, as was seen on both Interior Fraser coho and WCVI chinook study cases. Exceptions occur when the $S_{gen}$ estimates are below the absolute population thresholds (e.g., below 1500 spawners), as occurred in 1 CU for 3 years the interior Fraser coho study case<!--correct me I'm wrong on numbers here KH-->. The status assessments, however, are sensitive to the structural form of the underlying spawner-recruitment model used to estimate $S_{gen}$. The decision on which method to consider depends on the interpretation of the data and prior knowledge for each CU, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. <!--CH also wCVI CK was same for multidimensional and single metric approach using habitat-based benchmarks-->
-
-In data poor scenarios,.... <!--CH: i think we have to resolve the question in ISC chapter about why the single metric and multidimenationsal status were different for the same time series, before completing this paragraph--> it may not be possible to estimate $S_{gen}$, as was seen in the Inside South Coast Chum - Non-Fraser study case. When $S_{gen}$ estimates are not available and alternative single metric benchmarks are used, e.g. abundance percentiles, the status assessments between the rapid multidimensional scanning tool and single metric approach diverge more often. For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was triggered more often when percentile benchmarks were used. Whereas when the distributional target was used as a metric for the Interior Fraser coho study case, the LRP was triggered less often when compared to rapid multidimensional scanning tool. This is likely associated with the fact that alternative single metric benchmarks are usually more volatile then assessments results based on $S_{gen}$ or the rapid multidimensional scanning tool. In addition, using the rapid multidimensional scanning tool allows for the consideration of CUs that would otherwise be considered data deficient, thus allowing cor a more complete assessment of the SMU status. This was illustrated in the Inside South Coast Chum - Non-Fraser study case, as the exclusion of CUs with incomplete time series led to overoptimistic assessments. 
-
-We also found that removing component CUs from assessments of an SMU tended to increased variability in status, which may be more pessimistic or optimistic than when all CUs are considered. <!--CH: we only show this for ISC and in only a limited way, i.e., removing 1 or 2 CUs and not in all permuations. Do you think this is a problem? Kendra shows this more fully for logistic-regression based LRPs, but not ppn-based LRPs, and I don't show it all for WCVI chinook--> If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.<!--CH: Does this make sense to everyone?; it's a new point. I misunderstood this point when I initially drafted the guidelines paper, so I will have to go back and revise that. DAre here any suggestions on how to deal with this? This asymmetric property of ppn-based LRPs is one disadvantage of using it I think -->
+At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark ($S_{gen}$ or percentiles) resulted in similar status assessments to using the Rapid Multidimensional Scanning Tool. These similarities occur because when the lower benchmarks estimates are available, the rapid multidimensional scanning tool will almost always default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the interior Fraser coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Rapid Multidimensional Scanning Tool triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached. 
 
 
+In addition, we found that using the Rapid Multidimensional Scanning Tool allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Rapid Multidimensional Scanning Tool is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast case study. 
 
+<!--CH: this section needs to be informed by a discussion of CU-representativeness within each SMU (i.e., 4 criteria outlines in Ch 4 of Guidelines WP). My guess is that for WCVI CK, the threats are different enough that we could expect independent dynamics, e.g., not representative of each other, and this is likely the same for ISC chum. However, I'm not sure about IFR coho; the one v small CU might be considered independent of the others because it's so small, but the remaining 4 might be sufficiently similar to be representative?. 
+
+The question is, do we think that data-rich CUs (or CUs included in analyses) are representative of data-limited CUs (or those excluded) such that their exclusion shouldn't matter, or do we think that data-rich CUs are NOT representative of data-limited CUs so we expect a difference in SMU-level status when we include/exclude the additional CUs?  This will affect how we frame this section; either further supporting the four 'representativeness' criteria from the Guidelines WP, or, more likely, suggesting caution even when those guidelines are implemented.-->
+
+
+## SMU-level LRPs and assessments 
+
+We found that removing component CUs from assessments of an SMU tended to increase variability in SMU-level status, which may be more pessimistic or optimistic than when all CUs are considered depending in part on the level of covariation among CUs. <!--CH: I suggest we broaden this pgh to refer to both ppn-based and aggregate-abudnance based LRPs. Kendra shows this point best for logistic-regression based LRPs, but not ppn-based LRPs. While Luke shows variability in whether LRP is breached among data sets, that section does not show variability in status (% of CUs above red) per se, like Kendra does. And I don't show it at all for WCVI CK--> If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.<!--CH: Note to add this to Guidelines paper. This asymmetric property of both ppn-based and to a lesser extent these aggregate-abundance based LRPs is a characteristic we should highlight and cautious about; is a result of LRPs considering dynamics of component stocks that vary independently. -->
+
+For SMUs with component CUs that vary independently of each other, the inclusion of additional CU-level assessments will increase the likelihood of the proportion-based LRP being breached. For example, for the Inside South Coast Chum case study, when data-limited CUs were included in the derivation of proportion-based LRPs (i.e., CUs without percentile-based benchmarks), the proportion-based LRP was breached more often in historical analyses compared to when those CUs were excluded. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. Our results from this case study highlight the importance of including data from all CUs when CUs show high variability in status estimates. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt et al. (in review).
+
+
+For both proportion-based and aggregate-abundance based LRPs, we found that status assessments were sensitive to assumptions about the structural form of the underlying spawner-recruitment model used to estimate the lower benchmark, $S_{gen}$, and to considerations of different types of lower benchmarks, e.g., those reflecting distribution of spawners as considered in the Interior Fraser River coho case study. The decision on which structural form or type of benchmarks to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. This challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
+
+<!-- CH: I reworded this text in the paragraphs above. Can remove I think...
+it may not be possible to estimate $S_{gen}$, as was seen in the Inside South Coast Chum - Non-Fraser study case. When $S_{gen}$ estimates are not available and alternative single metric benchmarks are used, e.g. abundance percentiles, the status assessments between the rapid multidimensional scanning tool and single metric approach diverge more often. For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was triggered more often when percentile benchmarks were used. Whereas when the distributional target was used as a metric for the Interior Fraser coho study case, the LRP was triggered less often when compared to rapid multidimensional scanning tool. This is likely associated with the fact that alternative single metric benchmarks are usually more volatile then assessments results based on $S_{gen}$ or the rapid multidimensional scanning tool. In addition, using the rapid multidimensional scanning tool allows for the consideration of CUs that would otherwise be considered data deficient, thus allowing cor a more complete assessment of the SMU status. This was illustrated in the Inside South Coast Chum - Non-Fraser study case, as the exclusion of CUs with incomplete time series led to overoptimistic assessments. 
+-->
+
+
+
+
+
+<!--CH: perhaps we can just have subheadings for logistic regression-based LRPs and projection-based RLPS  within the heading "SMU-level LRPs and assessment" above, i.e., remove this heading here?  We don't really have anything to say about ppn-based LRPs not captured above, which I think are points that pertain to aggregate-abundance based LRP as well.
 
 ## Aggregate abundance-based LRPs
+-->
 
 ### Logistic regression-based LRPs
 
@@ -33,9 +55,9 @@ There are several disadvantages of the logistic regression-based LRPs. First, ou
 
 Second, logistic regression-based LRPs are only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. 
 
-Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated. For these SMUs, the aggregate abundances are not a significant indicator of individual CU statuses. Here, we found that logistic regression-based LRPs were estimable for interior Fraser coho (average correlation within CUS of 0.43) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of XX). Also, the wide rand in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression basd LRPs.
+Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated. For these SMUs, the aggregate abundances are not a significant indicator of individual CU statuses. Here, we found that logistic regression-based LRPs were estimable for interior Fraser coho (average correlation within CUS of 0.43) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of XX). Also, the wide rand in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs.
 
-<!-- I think this is the same for ppn based LRPs above, and is already mentioned in the last sentence of the 1st paragraph of this section. Is there something different about missing data with logistic regression LRPs that we can highlight. Otherwise omit this pgh?-->Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data are missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis. The influence of missing data was also dependent on the status of the CU for which data was missing. The omission of a CU with red status will be more influential that omitting data for a CU with amber or green status because the red status would trigger the LRP and change the SMU status for the logistic regression, biasing the aggregate abundance LRP to lower values. 
+<!-- CH: I think this is the same concept as mentioned in the text above for SMU assessmetns in general.  Is there something different about missing data with logistic regression LRPs that we can highlight. Otherwise omit this pgh?-->Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data are missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis. The influence of missing data was also dependent on the status of the CU for which data was missing. The omission of a CU with red status will be more influential that omitting data for a CU with amber or green status <!--CH I think this comes down to if they covary or not, and more specifically if they meet the 4 criteria for reprsenativeness. WE don't actually know if they covary if they are data-limited or data-deficient, hence we have to rely on the criteria. --> because the red status would trigger the LRP and change the SMU status for the logistic regression, biasing the aggregate abundance LRP to lower values. 
 
 <!--CH: maybe combine with 3rd challenge above? I suggest some text above, so could omit this here?-->Finally, it is important to inspect model diagnostics and statistically test the model assumptions whenever applying the logistic regression-based LRPs. In chapter \@ref(lrp-estimation-methods) we provide a list of model diagnostics that should be checked when applying this aggregate abundance LRP estimation method. In addition, we illustrate how the diagnostics are used in support of the model fit in chapter \@ref(IFCChapter), and against the model fit in the \@ref(ISCchumChapter).    
 
