--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -15,11 +15,16 @@ LRPs are biologically based values that are separate from management measures, b
 <!--CH side note:  DFO's Fisheries Sustainability checklist are typically management operational control points, and not biological LRPs per se-->
 
 
+<!--CH: moving intro to WSP, CUs and benchamrks up to here-->
+
+For Pacific salmon, the WSP establishes that management should occur at the Conservation Unit (CU) level. CUs are defined as sufficiently isolated groups that, if lost, are very unlikely to be recolonized naturally within an acceptable time frame [dfoCanadaPolicyConservation2005]. The WSP is aligned with the precautionary approach in establishing three biological status zones for each CU, which are delimited by lower and higher benchmarks. The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. The establishment of lower benchmarks are part of the WSP status assessments. To date, these assessments have been conducted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], coho salmon [@deckerAssessmentInteriorFraser2014; @dfoWildSalmonPolicy2015; @nobleHabitatbasedEscapementBenchmarks2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
+
 
 ## Review of Reference Points for Pacific Salmon
  <!--
 
-Consider changing this subtitle to "Reference Points and management benchmarks for Pacific Salmon populations"
+CW: Consider changing this subtitle to "Reference Points and management benchmarks for Pacific Salmon populations
+CH: I think we should keep benchmarks as biological values as defined in the WSP, i.e. not management benchmarks"
 
  -->
 
@@ -28,14 +33,16 @@ Consider changing this subtitle to "Reference Points and management benchmarks f
 LRPs are commonly used in the assessment and management for marine fisheries when they are used to inform harvest control rules. Reviews of the application of harvest control rules and reference points can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and limit reference points before the publication of the PA policy in 2006. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 15 years after the publication of the PA policy, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the PA policy, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
 
 
-In terms of Salmonids, @portleyLimitReferencePoints2014 reviewed the use of LRPs and lower benchmarks (or their absence) for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of lower benchmarks and LRPs in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the management of salmonids and other semelparous species. The review was focused on the applications of lower benchmarks at the Conservation Unit (CU) level, providing a comprehensive overview of the different methods available to assess CU status and their historical applications. @chaputConsiderationsDefiningReference2012 also provide considerations on managing multiple stocks as unit, e.g. multiple CUs as an SMU, highlighting that mixed stock management requires more precautionary benchmarks to ensure that all sub units remain above their lower benchmarks.
+
+
+
+In terms of Salmonids, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biologically defined conservation thresholds or lower benchmarks for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the management of salmonids and other semelparous species. The review was focused on the applications of lower benchmarks at the Conservation Unit (CU) level, providing a comprehensive overview of the different methods available to assess CU status and their historical applications. @chaputConsiderationsDefiningReference2012 also provide considerations on managing multiple stocks as unit, e.g. multiple CUs as an SMU, highlighting that mixed stock management requires more precautionary benchmarks to ensure that all sub units remain above their lower benchmarks.
 
 
 
  LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi-dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs. In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards to extends the scope of precaution and efficacy of the management framework. In the companion case study paper (Holt et al. in review), the multi-dimensional assessment approach introduced by (cite Pestal tech report) is used to approximate the integrated WSP status assessments for Pacific salmon CUs.  
 
 
-For Pacific salmon, the WSP establishes that management should occur at the Conservation Unit (CU) level. CUs are defined as sufficiently isolated groups that, if lost, are very unlikely to be recolonized naturally within an acceptable time frame [dfoCanadaPolicyConservation2005]. The WSP is aligned with the precautionary approach in establishing three biological status zones for each CU, which are delimited by lower and higher benchmarks. The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. The establishment of lower benchmarks are part of the WSP status assessments. To date, these assessments have been conducted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], coho salmon [@deckerAssessmentInteriorFraser2014; @dfoWildSalmonPolicy2015; @nobleHabitatbasedEscapementBenchmarks2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
 
 
 <!--
@@ -62,7 +69,7 @@ Scales of Pacific salmon assessment reporting
 
 -- Enhancement not included
 
-<!--CH notes to add
+<!--CH notes to add  
 •	Intro- maintaining CUs, portfolio effects to add resilience to threats over the long term, maintaining underlying biodiversity is important so it can buffer production during periods of declining productivity, and also ensure we have the diversity to maintain a species through environmental change
 •	Intro: add section on scoping, as outlines in TWG Mtg #16 pptx. Also, do any of the principles from the ppt need to be brought into the paper?
 •	Intro when defining Lower Benchmark: “the lower benchmark is defined as a level of abundance high enough to ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction” : SG: In practice this hasn’t been applied really. In the end a Red status CU largely aligns with an EN COSEWIC DU, etc. etc. I have looked at these comparsisons and really both WSP and COSEWIC align, we are not really creating any buffers b/w COSEWIC listing…so I would delete this as it just has confused things all along. 
