--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -3,6 +3,8 @@
 Should highlight the identification of questions / outstanding guidance that were beyond our scope
 
 
+<!--from CS paper-->
+We found that removing component CUs from assessments of an SMU tended to increase variability in SMU-level status, which may be more pessimistic or optimistic than when all CUs are considered depending in part on the level of covariation among CUs. <!--CH: I suggest we broaden this pgh to refer to both ppn-based and aggregate-abudnance based LRPs. Kendra shows this point best for logistic-regression based LRPs, but not ppn-based LRPs. While Luke shows variability in whether LRP is breached among data sets, that section does not show variability in status (% of CUs above red) per se, like Kendra does. And I don't show it at all for WCVI CK--> If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.<!--CH: Note to add this to Guidelines paper. This asymmetric property of both ppn-based and to a lesser extent these aggregate-abundance based LRPs is a characteristic we should highlight and cautious about; is a result of LRPs considering dynamics of component stocks that vary independently. -->
 
 
 - Specific questions about how well index sites within a CU represent the CU as a whole (i.e., representativeness question, but for sites within a CU instead of CUs within an SMU)
